<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/registerss"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tipName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/phone_number"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tipEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="@id/rdGroup"
                app:layout_constraintStart_toStartOf="@id/tipName"
                app:layout_constraintTop_toTopOf="@id/rdGroup" />

            <RadioGroup
                android:id="@+id/rdGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="3"

                app:layout_constraintEnd_toEndOf="@id/tipName"
                app:layout_constraintStart_toEndOf="@id/txtGender"
                app:layout_constraintTop_toBottomOf="@id/tipPhone">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other" />

            </RadioGroup>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:entries="@array/country"
                android:paddingVertical="10dp"

                app:layout_constraintEnd_toEndOf="@id/tipName"
                app:layout_constraintStart_toStartOf="@id/tipName"
                app:layout_constraintTop_toBottomOf="@id/rdGroup"

                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="password_toggle"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerCountry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipConPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/confirm_password"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="password_toggle"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tipPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:text="@string/registerss"
                android:textAllCaps="false"

                app:layout_constraintEnd_toEndOf="@id/tipEmail"
                app:layout_constraintStart_toStartOf="@id/tipEmail"
                app:layout_constraintTop_toBottomOf="@id/tipConPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>